# ch_mb

./: .gitignore  .gitmodules  CMSS_FaceRecognize.cpp  CMSS_FaceRecognize.h  CMakeLists.txt  README.txt  darknet.h  extract_features.cpp  readme.md  run.sh  simple.h  test_face_verification.cpp  test_main.cpp
dlib/: CMakeLists.txt
dlib/dnn/: core.h  loss_abstract.h
